[package]
name = "stringserver"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1.3", features = ["tokio", "server"] }
http-body-util = "0.1.0"
tokio = { version = "1.45.0", features = ["full"] }
bytes = "1.5.0"
